+ setup product module & refactor: separated model definitions into modules.dtos, and models directories
